fix: card size on small screen size

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,7 +5,6 @@
 .main {
 	min-height: 100vh;
 	padding: 4rem 0;
-	flex: 1;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -69,8 +68,6 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	flex-wrap: wrap;
-	max-width: 800px;
 	gap: 1rem;
 }
 
@@ -78,15 +75,14 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+
 	padding: 0.75rem 1rem;
-	text-align: left;
-	color: inherit;
 	text-decoration: none;
 	border-radius: 12px;
-	transition: color 0.15s ease, border-color 0.15s ease;
+	transition: all 0.15s ease, border-color 0.15s ease;
 
 	height: 56px;
-	width: 400px;
+	width: 360px;
 
 	background-color: #202024;
 	color: #7c7c8a;
@@ -123,6 +119,9 @@
 	.grid {
 		width: 100%;
 		flex-direction: column;
+	}
+	.card {
+		width: 260px;
 	}
 }
 
